Diapositivas 20 y 21: Se maquetaron 2 formularios para enviar información con distintos métodos, uno con GET, el cual pasó exitosamente y se mostró la data en el Servidor a través de la impresión en la Salida Estándar y otro con POST que por el momento saltó un Error porque no se agregó el Token contra el ataque CSRF

--- a/src/templates/components/navbar.html
+++ b/src/templates/components/navbar.html
@@ -10,5 +10,6 @@
         <a class="navbar__link" href="/personas/description">Description</a>
         <a class="navbar__link" href="/agregar">CREATE Persona</a>
         <a class="navbar__link" href="/search">Search!</a>
+        <a class="navbar__link" href="/personas/create">CREATE Persona 2!</a>
     </ul>
 </nav>
